# mlbck

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 63870fcb7c59_create_initial_tables.py  b01ce29fc40a_add_indexes.py
app/: main.py
app/api/v1/: accounts.py  attachments.py  folders.py  messages.py  router.py  send.py  sync.py  users.py
app/connectors/: base.py  errors.py  fake_connector.py  imap_connector.py  smtp_connector.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  attachment.py  folder.py  mail_account.py  message.py  sync_state.py  user.py
app/schemas/: accounts.py  attachments.py  folders.py  messages.py  send.py  sync.py  users.py
app/services/: accounts.py  attachments.py  folders.py  messages.py  send.py  sync.py  users.py
app/storage/: s3.py
tests/integration/: test_attachments_manual.py  test_error_handling.py  test_fake_mail_flow.py  test_health_and_accounts.py  test_incoming_attachments_sync.py  test_messages_pagination_search.py
